[gd_scene load_steps=2 format=3 uid="uid://dfmuvdkkrbkyd"]

[ext_resource type="Script" path="res://Scripts/kllzone.gd" id="1_i6fwx"]

[node name="kllzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_i6fwx")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -8548.0
offset_top = -4849.0
offset_right = 8505.0
offset_bottom = 4856.0
color = Color(1, 0, 0, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
